# ampd

./: MANIFEST.in  README.md  setup.cfg  setup.py
ampd/: __init__.py  client.py  errors.py  glib.py  request.py
examples/: ampc  ampc-gtk  ampc-gtk3  ampc-gtk4
src/ampd/: __init__.py  client.py  glib.py  request.py
