[metadata]
name = ampd
version = attr: ampd.__version__
author = Itaï BEN YAACOV
author_email = candeb@free.fr
description = Asynchronous MPD client library
long_description = file: README.md
url = https://github.com/begnac/ampd
keywords= mpd, client, asynchronous
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Sound/Audio
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    decorator
